--- a/templates/base.html
+++ b/templates/base.html
@@ -10,6 +10,23 @@
   <link rel="manifest" href="{% static 'favicon_io/site.webmanifest' %}">
 </head>
 <body>
+<header>
+  <div class="header-panel">
+    <a class="login-link" href="{% url 'login' %}">Войти / Регистрация</a>
+  </div>
+  <div class="header-logo">
+    <img src="{% static 'img/logos/logo.png' %}" alt="logo.png">
+  </div>
+  <div class="header-pages">
+    <a href="{% url 'home' %}">главная</a>
+    <a href="{% url 'catalog' slug='all' page=1 %}">каталог</a>
+    <a href="{% url 'about' %}">о нас</a>
+  </div>
+  <div class="header-cart">
+    <
+  </div>
+</header>
 {% block content %}{% endblock %}
+<footer></footer>
 </body>
 </html>
